manifests/distributions/maas-consumer-portal/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maas-consumer-portal
spec:
  parentRefs:
    - name: gateway-name
      kind: Gateway
      namespace: openshift-ingress
  rules:
    - matches:
        - path:
            type: Exact
            value: /maas-consumer-portal
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /maas-consumer-portal/
            statusCode: 302
    - matches:
        - path:
            type: PathPrefix
            value: /maas-consumer-portal
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: maas-consumer-portal
          port: 8443
